       2.7: TBD...

       NEW: Restore filter low cut and high cut between sessions.
       NEW: Restore FM parameters between sessions.
       NEW: Restore remote control state between sessions.
       NEW: Support for passband when setting mode through remote.
       NEW: Widget to enter receiver frequency.
     FIXED: Keep waterfall zoom level and zoom slider synchronised.
     FIXED: RDS status is not kept while jumping through bookmark.
     FIXED: .conf files are deleted when changes are saved.
     FIXED: Remote control not working if $http_proxy is set.
  IMPROVED: Tuning through the remote control interface.
  IMPROVED: Increase narrow band receiver rate to 96 ksps (for APT).
  IMPROVED: LimeSDR integration.
  IMPROVED: Voiceover interface.
  IMPROVED: Input decimator performance.
  IMPROVED: Increased frequency limit to 999 GHz (500 GHz LO).
  IMPROVED: More short waterfall time spans.


     2.6.1: Released February 16, 2017

  IMPROVED: Option for reverting the behavior of the frequency controller.


       2.6: Released October 3, 2016

       NEW: 1-2-5 scaling on FFT axis.
       NEW: Audio waterfall.
       NEW: Remember AGC settings between sessions.
       NEW: Right-click on FFT resets frequency zoom.
       NEW: Separate dB ranges for pandapter and waterfall.
       NEW: Raw I/Q mode.
       NEW: Portaudio support.
       NEW: Command line option to set Qt style (fusion, windows, ...)
     FIXED: Stuttering audio with Pulseaudio backend.
     FIXED: Use system font on FFT plot (too small font on high res displays).
     FIXED: Broken FUNcube Dongle Pro+ support on Mac OS X 10.11.4.
     FIXED: Correct display of negative offsets between -1 and 0 kHz.
     FIXED: Reset frequency digits below the one that is being changed.
     FIXED: LNB LO could not be set from I/O configuration dialog.
     FIXED: Update squelch level when switching between demodulators.
     FIXED: Set correct filter range when loading bookmark.