@@ -185,6 +185,7 @@ private slots:
     void on_modeButton_clicked();
     void on_agcButton_clicked();
     void on_autoSquelchButton_clicked();
+    void on_resetSquelchButton_clicked();
     //void on_agcPresetCombo_activated(int index);
     void on_agcPresetCombo_currentIndexChanged(int index);
     void on_sqlSpinBox_valueChanged(double value);
